--- a/package.json
+++ b/package.json
@@ -45,9 +45,11 @@
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
+    "drizzle-orm": "^0.44.7",
     "embla-carousel-react": "8.5.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
+    "mysql2": "^3.15.3",
     "next": "16.0.3",
     "next-themes": "^0.4.6",
     "react": "19.2.0",
