feat: refactor global styles and integrate Tailwind CSS with custom theming
- Updated global CSS to utilize Tailwind CSS with custom properties for theming.
- Removed previous CSS variables and replaced them with Tailwind's utility classes.
- Added dark mode support with appropriate color variables.
- Enhanced the structure of the CSS for better maintainability.

chore: update TypeScript configuration for improved module handling

- Simplified TypeScript configuration by removing unnecessary options.
- Consolidated library definitions and path aliases for clarity.

feat: add ESLint configuration for TypeScript and Drizzle

- Introduced ESLint configuration to enforce coding standards and best practices.
- Integrated TypeScript-specific rules and Drizzle plugin for database operations.

docs: create a new markdown file for notes on development practices

- Added a markdown file to document learnings and best practices for development.

feat: implement database schema for drive clone application

- Created SQL tables for files and folders in the drive clone application.
- Added indexes for efficient querying based on owner and parent relationships.

feat: set up PostHog for analytics tracking

- Integrated PostHog for user analytics and page view tracking.
- Created a provider component to manage PostHog initialization and user identification.

feat: implement file upload functionality with Uploadthing

- Developed API routes for handling file uploads with Uploadthing.
- Added client-side components for file upload interactions.

feat: create dynamic folder and file display in the UI

- Implemented components to display files and folders dynamically based on user interactions.
- Enhanced navigation and user experience within the drive clone application.

chore: add middleware for Clerk authentication

- Set up middleware to handle authentication with Clerk for secure API access.

feat: implement sandbox for testing folder creation

- Created a sandbox page for testing

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,5 +1,11 @@
 name: CI
 
+# when push, their are jobs to do that runs in ubuntu-latest, and the steps are:
+# 1. Checkout the code
+# 2. Install dependencies
+# 3. Copy .env.example files
+# 4. Typecheck
+# 5. Lint
 on: [push]
 
 jobs:
@@ -15,3 +21,9 @@ jobs:
       - name: Copy .env.example files
         shell: bash
         run: find . -type f -name ".env.example" -exec sh -c 'cp "$1" "${1%.*}"' _ {} \;
+
+      - name: Typecheck
+        run: pnpm typecheck
+
+      - name: Lint
+        run: pnpm lint
