--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,16 @@
 
 # Drizzle
 DATABASE_URL="file:./db.sqlite"
+
+# Example:
+# SERVERVAR="foo"
+# NEXT_PUBLIC_CLIENTVAR="bar"
+
+NEXT_PUBLIC_POSTHOG_KEY="replace-with-your-key"
+NEXT_PUBLIC_POSTHOG_HOST="replace-with-your-host-url"
+
+SINGLESTORE_PASS="notpassword"
+SINGLESTORE_USER="drive-clone-v2"
+SINGLESTORE_HOST= "something.singlestore.com"
+SINGLESTORE_PORT= "3333"
+SINGLESTORE_DB_NAME= "db_2a5c2"
