--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "google-drive",
+  "name": "drive-clone",
   "version": "0.1.0",
   "private": true,
   "type": "module",
@@ -20,7 +20,7 @@
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache"
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.10.3",
+    "@clerk/nextjs": "^6.11.1",
     "@libsql/client": "^0.9.0",
     "@radix-ui/react-slot": "^1.1.1",
     "@t3-oss/env-nextjs": "^0.10.1",
@@ -31,17 +31,16 @@
     "geist": "^1.3.0",
     "lucide-react": "^0.474.0",
     "mysql2": "^3.12.0",
-    "next": "^15.1.6",
-    "posthog-js": "^1.211.2",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "tailwind-merge": "^2.6.0",
+    "next": "^15.0.1",
+    "posthog-js": "^1.215.6",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^7.4.4",
     "zod": "^3.23.3"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.17",
     "@types/eslint": "^8.56.10",
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
@@ -50,16 +49,16 @@
     "@typescript-eslint/parser": "^8.1.0",
     "drizzle-kit": "^0.30.2",
     "eslint": "^8.57.0",
-    "eslint-config-next": "^15.1.6",
+    "eslint-config-next": "^15.0.1",
     "eslint-plugin-drizzle": "^0.2.3",
     "postcss": "^8.4.39",
     "prettier": "^3.3.2",
     "prettier-plugin-tailwindcss": "^0.6.5",
-    "tailwindcss": "^4.1.17",
+    "tailwindcss": "^3.4.3",
     "typescript": "^5.5.3"
   },
   "ct3aMetadata": {
     "initVersion": "7.38.1"
   },
-  "packageManager": "pnpm@9.10.0"
+  "packageManager": "pnpm@9.12.3"
 }
